implemented booking mechanism, category controller